# ChangeLog for dev-games/libsnes-c++98
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Feb 2012; Michał Ziąbkowski <mziab@o2.pl> libsnes-c++98-082.ebuild,
  libsnes-c++98-083.ebuild, libsnes-c++98-084.ebuild,
  libsnes-c++98-9999.ebuild:
  Reworked src_install.

*libsnes-c++98-9999 (13 Jan 2012)
*libsnes-c++98-084 (13 Jan 2012)
*libsnes-c++98-083 (13 Jan 2012)
*libsnes-c++98-082 (13 Jan 2012)

  13 Jan 2012; Michał Ziąbkowski <mziab@o2.pl> -libsnes-c++98-0.82.ebuild,
  -files/libsnes-c++98-0.82-makefile.patch, -libsnes-c++98-0.83.ebuild,
  -libsnes-c++98-0.84.ebuild, +libsnes-c++98-082.ebuild,
  +files/libsnes-c++98-082-makefile.patch, +libsnes-c++98-083.ebuild,
  +libsnes-c++98-084.ebuild, +libsnes-c++98-9999.ebuild:
  Changed versioning. Fixed QA warning about library symlink. Added live git
  ebuild.

*libsnes-c++98-0.84 (19 Dec 2011)

  19 Dec 2011; Michał Ziąbkowski <mziab@o2.pl> +libsnes-c++98-0.84.ebuild:
  Bumped.

*libsnes-c++98-0.83 (14 Nov 2011)

  14 Nov 2011; Michał Ziąbkowski <mziab@o2.pl> +libsnes-c++98-0.83.ebuild:
  Bumped.

*libsnes-c++98-0.82 (27 Sep 2011)

  27 Sep 2011; Michał Ziąbkowski <mziab@o2.pl> +libsnes-c++98-0.82.ebuild,
  +files/libsnes-c++98-0.82-makefile.patch, +metadata.xml:
  New ebuild for libsnes C++98 fork. Based mostly on the ebuild from bug
  #380887.
