@@ -2,6 +2,14 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*libsnes-c++98-085 (18 Apr 2012)
+
+  18 Apr 2012; Michał Ziąbkowski <mziab@o2.pl> libsnes-c++98-082.ebuild,
+  libsnes-c++98-083.ebuild, libsnes-c++98-084.ebuild,
+  +libsnes-c++98-085.ebuild, -libsnes-c++98-9999.ebuild:
+  Fixed repo URI. Added ebuild for the last libsnes-based version and removed
+  9999 ebuild to avoid confusion with libretro.
+
   06 Feb 2012; Michał Ziąbkowski <mziab@o2.pl> libsnes-c++98-082.ebuild,
   libsnes-c++98-083.ebuild, libsnes-c++98-084.ebuild,
   libsnes-c++98-9999.ebuild:
